add main auth logic
